* log: redirect stdout/stderr to /dev/null if syslog is used
* set the close-on-exec flag on all file descriptors
* pcm_volume, pcm_mix: implemented 32 bit support
* support packed 24 bit samples
* CUE sheet support
* obey $(sysconfdir) for default mpd.conf location
* build with large file support by default
* added test suite ("make check")
* require GLib 2.12


ver 0.15.8 (2010/01/17)
* input:
  - curl: allow rewinding with Icy-Metadata
* decoders:
  - ffmpeg, flac, vorbis: added more flac/vorbis MIME types
  - ffmpeg: enabled libavformat's file name extension detection
* dbUtils: return empty tag value only if no value was found
* decoder_thread: fix CUE track playback
* queue: don't repeat current song in consume mode


ver 0.15.7 (2009/12/27)
* archive:
  - close archive when stream is closed
  - iso, zip: fixed memory leak in destructor
* input:
  - file: don't fall back to parent directory
  - archive: fixed memory leak in error handler
* tags:
  - id3: fix ID3v1 charset conversion
* decoders:
  - eliminate jitter after seek failure
  - ffmpeg: don't try to force stereo
  - wavpack: allow fine-grained seeking
* mixer: explicitly close all mixers on shutdown
* mapper: fix memory leak when playlist_directory is not set
* mapper: apply filesystem_charset to playlists
* command: verify playlist name in the "rm" command
* database: return multiple tag values per song


ver 0.15.6 (2009/11/18)
* input:
  - lastfm: fixed variable name in GLib<2.16 code path
  - input/mms: require libmms 0.4
* archive:
  - zzip: require libzzip 0.13
* tags:
  - id3: allow 4 MB RIFF/AIFF tags
* decoders:
  - ffmpeg: convert metadata
  - ffmpeg: align the output buffer
  - oggflac: rewind stream after FLAC detection
  - flac: fixed CUE seeking range check
  - flac: fixed NULL pointer dereference in CUE code
* output_thread: check again if output is open on PAUSE
* update: delete ignored symlinks from database
* database: increased maximum line length to 32 kB